fixed horizontal scroll

--- a/style.css
+++ b/style.css
@@ -4,10 +4,13 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  width: auto;
-  margin: auto;
+  width: 1000px;
+  top: 0;
+  bottom: 0;
+  margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
     sans-serif, Apple Color Emoji, Segoe UI Emoji;
+  overflow-y: auto;
 }
 
 .container {
@@ -18,6 +21,7 @@ body {
   border-radius: 5px 5px 0px 0px;
   opacity: 0.7;
   font-size: 11px;
+  margin: 0 auto;
 }
 
 .grid {
@@ -60,7 +64,7 @@ body {
 /* Show the tooltip text when you mouse over the tooltip container */
 .tooltip:hover .tooltiptext {
   visibility: visible;
-  opacity: 0.7;
+  opacity: 0.8;
 }
 
 .tooltip .tooltiptext::after {
